@@ -231,6 +231,9 @@ Core and builtins
 Extension modules
 -----------------
 
+- Added socket.getservbyport(), and make the second argument in
+  getservbyname() and getservbyport() optional.
+
 - time module code that deals with input POSIX timestamps will now raise
   ValueError if more than a second is lost in precision when the
   timestamp is cast to the platform C time_t type.  There's no chance
